Fixed margin spacing for lists

--- a/css/styles.css
+++ b/css/styles.css
@@ -801,7 +801,7 @@ table th, table td {
 }
 
 /* line 660, ../sass/_normalize.scss */
-.main li {
+.main article li {
   margin: 1em 0;
 }
 
