--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -656,8 +656,8 @@ table {
   
 }
 
-.main {
-  li{
+.main { 
+  article li{
     margin: 1em 0;
     
   }
